# ChessGame

./: .gitignore  Cargo.toml  README.md  Trunk.toml  bench.html  chess_game-19f07df52adc60e9.js  chess_game-19f07df52adc60e9_bg.wasm  chess_game-259a77dd6e4e7698.js  chess_game-259a77dd6e4e7698_bg.wasm  chess_game-2d1de70e3cb33d36.js  chess_game-2d1de70e3cb33d36_bg.wasm  chess_game-33bc36bf172c6f6a.js  chess_game-33bc36bf172c6f6a_bg.wasm  chess_game-3ac4b149b4739e0d.js  chess_game-3ac4b149b4739e0d_bg.wasm  chess_game-4d147fcead67a80e_bg.wasm  chess_game-5af8fad4071e802d.js  chess_game-5af8fad4071e802d_bg.wasm  chess_game-8627482c098b62ce.js  chess_game-8627482c098b62ce_bg.wasm  chess_game-8810b97167340c98.js  chess_game-8810b97167340c98_bg.wasm  chess_game-9ac156c8337c428d_bg.wasm  chess_game-a0ac9e903749e2a5_bg.wasm  chess_game-ac5f2c6b21f7cafa.js  chess_game-ac5f2c6b21f7cafa_bg.wasm  chess_game-ad2963b90b478ae1.js  chess_game-ad2963b90b478ae1_bg.wasm  chess_game-b7f805292228c04f.js  chess_game-b7f805292228c04f_bg.wasm  chess_game-ca06d866cbbc2bd8.js  chess_game-ca06d866cbbc2bd8_bg.wasm  chess_game-debb50fcbd186069.js  chess_game-debb50fcbd186069_bg.wasm  chess_game-e3e8a5939eb7f8c9.js  chess_game-e3e8a5939eb7f8c9_bg.wasm  chess_game-e6e91f98b12e2067.js  chess_game-e6e91f98b12e2067_bg.wasm  chess_game.js  chess_game_bg.wasm  (+3 more)
docs/: ALGORITHMS.md  ARCHITECTURE.md  JUSTFILE.md
src/: board.rs  cell.rs  get_inputs.rs  gui.rs  lib.rs  main.rs  pat_and_mate.rs  threats.rs  validate_move.rs
test/: checkmate_black  en_passant  en_passant_2  little_roque_white  promote
(+199 files in other folders)
